<resources>
    <string name="app_name">Material Typograpy Sample</string>
    <string name="test_text">ABCDEあいうえお朝辞白帝彩</string>

    <string name="font_roboto">roboto</string>
    <string name="font_noto">noto</string>
    <string name="font_default">default</string>

    <string name="display1">Display1 (Regular 34sp)</string>
    <string name="headline">Headline (Regular 24sp)</string>
    <string name="title">Title (Medium 20sp)</string>
    <string name="subhead">Subhead (Regular 16sp)</string>
    <string name="body2">Body2 (Medium 14sp)</string>
    <string name="body1">Body1 (Regular 14sp)</string>
    <string name="caption">Caption (Regular 12sp)</string>
</resources>
