<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar"
    android:foreground="?android:windowContentOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing">

        <TextView
            style="@style/TextSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:text="@string/display1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_34sp" />

        <TextView
            style="@style/TextSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24sp" />

        <TextView
            style="@style/TextSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/subhead" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16sp" />

        <TextView
            style="@style/TextSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/body2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp" />

        <TextView
            style="@style/TextSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/caption" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_12sp" />

    </LinearLayout>

</ScrollView>